--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,14 @@
       "es2015.symbol"
     ]
   },
+  "watchOptions": {
+    // Use native file system events for files and directories
+    "watchFile": "useFsEvents",
+    "watchDirectory": "useFsEvents",
+    // Poll files for updates more frequently
+    // when they're updated a lot.
+    "fallbackPolling": "dynamicPriority"
+  },
   "include": ["src/**/*", "tests/**/*"],
   "exclude": [
     "node_modules"
