--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve":"tsc  --target ES5 --experimentalDecorators --module commonjs --noImplicitThis --watch"
   },
   "author": "",
   "license": "ISC",
